objects/CO_Conditions_of_Approval__c.object
<CustomObject>
    <description>This object holds the Condition of Approval details of the related Loan records.</description>
    <fields>
        <fullName>CF_Condition_Type__c</fullName>
        <label>Condition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Free Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Conditions_of_Approval_Narrative__c</fullName>
        <description>This field is used on Conditions of Approval Narrative section on Credit Memo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Conditions of Approval Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conditions of Approvals</relationshipLabel>
        <relationshipName>Conditions_of_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Due_Days__c</fullName>
        <description>It will use to know the number of days passed by due date.</description>
        <formula>IF(TODAY()- CF_Due_Date__c &lt;0 , IF(CF_Due_Date__c - TODAY() &lt;= 30,&apos;Next 30 days&apos;,IF(CF_Due_Date__c - TODAY() &lt;= 60,&apos;Next 60 days&apos;,IF(CF_Due_Date__c - TODAY() &lt;= 90,&apos;Next 90 days&apos;,IF(CF_Due_Date__c - TODAY() &gt; 90,&apos;Next 90+ days&apos;,&apos;&apos;)))),IF(TODAY()- CF_Due_Date__c &lt;= 30,&apos;Past due 30 days&apos;,IF(TODAY()- CF_Due_Date__c  &gt; 30, &apos;Past due more than 30 days&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Free_Form_Condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Free Form Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Conditions of Approvals</relationshipLabel>
        <relationshipName>Condition_of_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CF_Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condition_of_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Required_By__c</fullName>
        <label>Required By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre Closing</fullName>
                </value>
                <value>
                    <fullName>At Closing</fullName>
                </value>
                <value>
                    <fullName>Post Closing</fullName>
                </value>
                <value>
                    <fullName>Pre Funding</fullName>
                </value>
                <value>
                    <fullName>At Funding</fullName>
                </value>
                <value>
                    <fullName>Pre-Doc Prep</fullName>
                    <isActive>false</isActive>
                    <label>Pre-Doc Prep</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Standard_Condition__c</fullName>
        <label>Standard Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Rent Roll/Lease Submitted</fullName>
                </value>
                <value>
                    <fullName>Collection(s) Paid and Explanation Provided</fullName>
                </value>
                <value>
                    <fullName>Judgment or Lien Paid and Explanation Provided</fullName>
                </value>
                <value>
                    <fullName>Proof of Sufficient Cash Down</fullName>
                </value>
                <value>
                    <fullName>Satisfactory Appraisal and Review</fullName>
                </value>
                <value>
                    <fullName>Satisfactory Environmental Report</fullName>
                </value>
                <value>
                    <fullName>Find Financial Institution to Participate in the Transaction</fullName>
                </value>
                <value>
                    <fullName>Receipt of Additional Financial Information - Reviewed and Approved by Credit</fullName>
                </value>
                <value>
                    <fullName>Add Additional Guarantor</fullName>
                </value>
                <value>
                    <fullName>Add Additional Collateral</fullName>
                </value>
                <value>
                    <fullName>Subordination or Priority Lien Holder</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Deposit or Treasury Management Products</fullName>
                </value>
                <value>
                    <fullName>Completion of Asset Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>No Longer Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conditions of Approval</label>
    <nameField>
        <displayFormat>COA-{0000}</displayFormat>
        <label>C.O.A</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions of Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>